# System-for-Analyzing-Voice-Based-Role-Play-Case

./: generate_audio.py  pnpm-lock.yaml  pyproject.toml  replit.md  start.sh
Architectural-Revival6/: README.md  package.json  pnpm-lock.yaml
Architectural-Revival6/artifacts/hr-app/: package.json
Architectural-Revival6/attached_assets/: Pasted-Build-a-Full-Stack-Russian-HR-voice-assessment-MVP-Role_1775416687901.txt
Architectural-Revival6/backend/: config.py  database.py  main.py  prompts.py
Architectural-Revival6/frontend/: index.html  package.json  vite.config.ts
artifacts/hr-app/: index.html
artifacts/hr-backend/: config.py  database.py  generate_audio.py  hr_assessments.db  main.py  prompts.py  run.py
attached_assets/: Pasted---1778718196392_1778718196392.txt  Pasted--1-SYSTEM-PROMPT-HR--1778878748831_1778878748832.txt  Pasted--Claude-LLM--1778878833130_1778878833130.txt  Pasted--HR--1779209405076_1779209405076.txt  Pasted--HR--1779219773686_1779219773687.txt  Pasted--HR--1779267915652_1779267915652.txt  Pasted--HR--1779281573372_1779281573373.txt  Pasted--HR--1779281582093_1779281582094.txt  Pasted--Role-Cases-AI-Assessor--1778697418596_1778697418596.txt  Pasted--halo-effect--1778438179123_1778438179124.txt  Pasted-1-text--1778435573271_1778435573271.txt
backend/: config.py  database.py  main.py  prompts.py
backend/audio/: candidate_10_0.webm  candidate_12_0.webm  candidate_3_1.webm  candidate_4_0.webm  candidate_6_0.webm  candidate_6_1.webm  candidate_8_0.webm
frontend/: package-lock.json  tailwind.config.js
frontend/src/: App.tsx  api.ts
(+54 files in other folders)
