[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.24",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.43.0",
]
